ensure that snippet visibility rules are not overridden

--- a/assets/stylesheets/pages/_landing.scss
+++ b/assets/stylesheets/pages/_landing.scss
@@ -26,10 +26,10 @@
 }
 
 .featured-snippet {
-  display: none;
+  display: none !important;
 
   &.visible {
-    display: block;
+    display: block !important;
   }
 
   &.highlighter-rouge {
